<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_heading"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/full_name_description"
        android:hint="@string/full_name_hint"
        android:importantForAccessibility="yes"
        android:inputType="text" />

    <EditText
        android:id="@+id/newUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/new_username_description"
        android:hint="@string/new_username_hint"
        android:importantForAccessibility="yes"
        android:inputType="text" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/email_description"
        android:hint="@string/email_hint"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress" />

    <!-- Password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/password_description"
        android:hint="@string/password_hint"
        android:importantForAccessibility="yes"
        android:inputType="textPassword" />

    <!-- University Name -->
    <EditText
        android:id="@+id/universityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/university_description"
        android:hint="@string/university_hint"
        android:importantForAccessibility="yes"
        android:inputType="text" />

    <!-- User Type Radio Buttons -->
    <RadioGroup
        android:id="@+id/userTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/studentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:contentDescription="@string/student_radio_description"
            android:importantForAccessibility="yes"
            android:text="@string/student_radio_button" />


        <RadioButton
            android:id="@+id/teacherRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/teacher_radio_description"
            android:importantForAccessibility="yes"
            android:text="@string/teacher_radio_button" />
    </RadioGroup>

    <Button
        android:id="@+id/signUpSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/sign_up_button_description"
        android:importantForAccessibility="yes"
        android:text="@string/sign_up_button_text" />

</LinearLayout>
